Reset font-size on body for correct inline spacing

--- a/src/assets/stylesheets/layout/_base.scss
+++ b/src/assets/stylesheets/layout/_base.scss
@@ -64,6 +64,9 @@ html {
 body {
   position: relative;
   height: 100%;
+  // Hack: reset font-size to 10px, so the spacing for all inline elements is
+  // correct again. Otherwise the spacing would be based on 20px.
+  font-size: 0.5rem;
 
   // [tablet portrait -]: Lock body to disable scroll bubbling
   @include break-to-device(tablet portrait) {
